--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-async-storage/async-storage": "~1.15.0",
     "dotenv": "^16.0.0",
     "expo": "~44.0.0",
+    "expo-linking": "^3.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
@@ -48,7 +49,9 @@
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|react-router-native)"
     ],
-    "setupFilesAfterEnv": ["<rootDir>/setupTests.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ]
   },
   "private": true
 }
